--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -5,6 +5,15 @@
   margin: 30px;
 }
 
+.tweet-container:hover {  
+  box-shadow: 8px 8px grey;
+}
+
+.username {
+  font-family: 'Source Sans Pro';
+  color: #313131;
+}
+
 /* header */
 
 .profile {
@@ -19,12 +28,6 @@
   padding-right: 75%;
   padding-left: 20px;
 }
-
-.username {
-  font-family: 'Source Sans Pro';
-  color: #313131;
-}
-
 
 /* tweet */
 
