--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,7 +16,9 @@ html {
 
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color:#eceae2;
 }
 
