--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,26 @@
+.error-word-limit {
+  background-color: #fce4e4;
+  border: 1px solid #fcc2c3;
+  float: left;
+  padding: 20px 30px;
+}
+
+.error-empty-text {
+  background-color: #fce4e4;
+  border: 1px solid #fcc2c3;
+  float: left;
+  padding: 20px 30px;
+}
+
+.error-text {
+  color: #cc0033;
+  font-family: 'Source Sans Pro';
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 20px;
+  text-shadow: 1px 1px rgba(250,250,250,.3);
+}
+
 .new-tweet {
   display: flex;
   flex-direction: column;
@@ -20,20 +43,20 @@
   flex-direction: column;
 }
 
-button {
-  font-family: 'Bungee';
-  color: #ffffff;
-  background: #96d3da;
-  cursor: pointer;
-  font-size: 1.5rem;
-}
-
 #button-counter {
   display: flex;
   font-family:: 'Bungee';
   justify-content: space-between;
   font-weight: bold;
   color: black;
+}
+
+#tweet-button {
+  font-family: 'Bungee';
+  color: #ffffff;
+  background: #96d3da;
+  cursor: pointer;
+  font-size: 1.5rem;
 }
 
 .over-word-limit {
