--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -8,8 +8,13 @@
   margin: 30px;
 }
 
+.tweet-container:hover div.username {
+  display: block;
+}
+
 .tweet-container:hover {
   box-shadow: 8px 8px grey;
+  font-weight: bold;
 }
 
 /* header */
@@ -23,11 +28,12 @@
 .user-fullname {
   font-family: 'Source Sans Pro';
   color: #313131;
-  padding-right: 75%;
+  padding-right: 70%;
   padding-left: 20px;
 }
 
 .username {
+  display: none;
   font-family: 'Source Sans Pro';
   color: grey;
 }
