--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,7 +19,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color:#eceae2;
+  background-color: #f8f8f8;
 }
 
 /*
