--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -23,14 +23,21 @@
 .profile {
   display: flex;
   justify-content: flex-start;
-  
+  width: 100%;
+  margin: 0 auto;
+}
+
+.user-info {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 2%;
 }
 
 .user-fullname {
   font-family: 'Source Sans Pro';
   color: #313131;
-  padding-right: 70%;
-  padding-left: 20px;
 }
 
 .username {
@@ -64,4 +71,29 @@ footer {
 
 .icons {
   align-self: center;
+}
+
+/* Mobile version*/
+@media only screen and (max-width: 767px) {
+  .tweets {
+    border-bottom-width : 3px;
+    font-size: 25px;
+    word-break: break-all;
+  }
+
+  .date {
+    font-size: 15px;
+  }
+}
+
+/* Desktop  Version */
+@media only screen and (min-width: 1024px) {
+  .all-tweets {
+    width: 90%;
+  }
+
+  .user-info {
+    width: 80rem;
+    justify-content: space-between;
+  }
 }
