--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -18,10 +18,20 @@ nav {
   margin-left: 20px;
 }
 
-.subtitle {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 24px;
+#subtitle {
+  color: #363636;
+  font-family: 'Source Sans Pro';
+  font-size: 26px;
   margin-right: 20px;
+  border: none;
+  background-color: transparent;
+  padding: 10px 24px;
+  letter-spacing: 0;
+}
+
+#subtitle:hover {
+  opacity: 1;
+  letter-spacing: 5px;
 }
 
 @media only screen and (max-width: 767px) {
