--- a/public/styles/all-tweets.css
+++ b/public/styles/all-tweets.css
@@ -13,6 +13,10 @@
   display: block;
 }
 
+.tweet-container:hover div.icons {
+  display: block;
+}
+
 .tweet-container:hover {
   box-shadow: 8px 8px grey;
   font-weight: bold;
@@ -69,9 +73,16 @@ footer {
   font-size: 20px;
 }
 
+.fa-2x {
+  padding: 2px;
+}
+
 .icons {
+  display: none;
   align-self: center;
 }
+
+
 
 /* Mobile version*/
 @media only screen and (max-width: 767px) {
