--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -32,6 +32,7 @@ nav {
 #subtitle:hover {
   opacity: 1;
   letter-spacing: 5px;
+  outline: none;
 }
 
 @media only screen and (max-width: 767px) {
