--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,5 @@
+/**** error boxes ****/
+
 .error-word-limit {
   background-color: #fce4e4;
   border: 1px solid #fcc2c3;
@@ -24,6 +26,8 @@
   line-height: 20px;
   text-shadow: 1px 1px rgba(250,250,250,.3);
 }
+
+/**** new incoming tweet box ****/
 
 .new-tweet {
   display: flex;
